build: Maven/tests on JDK17 or later
Signed-off-by: Andreas Reichel <andreas@manticore-projects.com>