@@ -383,6 +383,10 @@
                     <trimStackTrace>false</trimStackTrace>
                     <!-- AlterViewTest does deep reflection -->
                     <useModulePath>false</useModulePath>
+                    <argLine>
+                        --add-opens=java.base/java.lang=ALL-UNNAMED
+                        --add-opens=java.base/java.util=ALL-UNNAMED
+                    </argLine>
                 </configuration>
             </plugin>
             <plugin>
